--- a/style.css
+++ b/style.css
@@ -42,3 +42,47 @@ a:hover{
     color: #7A3CBD;
     margin:0 auto;
 }
+
+.hexagon {
+    position: relative;
+    width: 150px; 
+    height: 86.60px;
+    background-color: #64C7CC;
+    margin: 43.30px 0;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+  }
+  
+  .hexagon:before,
+  .hexagon:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    width: 106.07px;
+    height: 106.07px;
+    -webkit-transform: scaleY(0.5774) rotate(-45deg);
+    -ms-transform: scaleY(0.5774) rotate(-45deg);
+    transform: scaleY(0.5774) rotate(-45deg);
+    background-color: inherit;
+    left: 21.9670px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+  }
+  
+  .hexagon:before {
+    top: -53.0330px;
+  }
+  
+  .hexagon:after {
+    bottom: -53.0330px;
+  }
+  
+  /*cover up extra shadows*/
+  .hexagon span {
+    display: block;
+    position: absolute;
+    top:0px;
+    left: 0;
+    width:150px;
+    height:86.6025px;
+    z-index: 2;
+    background: inherit;
+  }
