--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(lyonnette/lyonnette.png);
+    background-image: url(knitting250px/knitting250px_@2X.png);
 }
 
 nav {
@@ -17,63 +17,28 @@ h1, h2 {
     color: #F0CE50;
 }
 
-a{
-    color: #06859C;
-
-}
-
-article{
-    width: 65%;
-    margin:0 auto;
-    margin-top: 50px;
-    border: #41B213 3px solid;
-}
-
-a:hover{
-    color: #FF6144;
-}
-
-.navbar navbar-dark bg-dark {
-    background-color: red;
-}
-
-#ghostyboy{
-    
-    color: #7A3CBD;
-    margin:0 auto;
+.projects {
+    width: 75%;
+    margin: 0 auto;
+    background-color: blanchedalmond;
 }
 
 .hexagon {
-    position: relative;
-    width: 150px; 
-    height: 86.60px;
-    background-color: #64C7CC;
-    margin: 43.30px 0;
-    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    width: 0;
+    border-bottom: 30px solid #6C6;
+    border-left: 52px solid transparent;
+    border-right: 52px solid transparent;
+
+    width: 104px;
+    height: 60px;
+    background-color: #6C6;
+
+    width: 0;
+    border-top: 30px solid #6C6;
+    border-left: 52px solid transparent;
+    border-right: 52px solid transparent;
   }
   
-  .hexagon:before,
-  .hexagon:after {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    width: 106.07px;
-    height: 106.07px;
-    -webkit-transform: scaleY(0.5774) rotate(-45deg);
-    -ms-transform: scaleY(0.5774) rotate(-45deg);
-    transform: scaleY(0.5774) rotate(-45deg);
-    background-color: inherit;
-    left: 21.9670px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.3);
-  }
-  
-  .hexagon:before {
-    top: -53.0330px;
-  }
-  
-  .hexagon:after {
-    bottom: -53.0330px;
-  }
   
   /*cover up extra shadows*/
   .hexagon span {
