--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body {
 h1 {
     text-align: center;
     color: #5E503F;
+    letter-spacing: 1.5em;
+    font-variant: small-caps;
+        text-shadow:
+            -2px -2px 0 #0a0908,
+            2px -2px 0 #0a0908,
+            -2px 2px 0 #0a0908,
+            2px 2px 0 #0a0908;
 }
 hr {
     display: block;
@@ -41,39 +48,41 @@ img:hover {
 #main {
     position: absolute;
     margin: 0 auto;
-    top: 35%;
+    top:25%;
     background-color: rgb(242,244,243, .7);
     width: 100%;
     z-index: -1;
+    overflow: scroll;
+    height: 75%;
 }
 
 #about, #projects, #contact {
-    width: 75%;
+    width: 80%;
     margin: 0 auto;
     padding: 35px;
 }
 
 #about {
     position: relative;
-    margin-top: 95px;
+    margin-top: 85px;
 }
 
 .dot {
+    background-image: url(images/Headshot.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 200px;
     width: 200px;
-    background-color: #bbb;
     border-radius: 50%;
     margin: 0 auto;
-    margin-top: 10%
+    margin-top: 4%
   }
 
-  .accordian {
+.condiv{
+    float: left;
+    margin: 7.5%;
+  }
+
+  #linktoproj {
       margin: 0 auto;
-  }
-
-  #me {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    display: none;
   }
